--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"OrdersDBContext": "Server=(localdb)\\mssqllocaldb;Database=OrdersDBContext;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "OrdersDBContext": "Data Source=ms-sql-8.in-solve.ru;Initial Catalog=1gb_orderstest;User ID=1gb_egorovdj;Password=3zzbbc78bqwr;MultipleActiveResultSets=true"
+    "OrdersDBContext": "Server=(localdb)\\mssqllocaldb;Database=OrdersDBContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
